--- a/northflank.yaml
+++ b/northflank.yaml
@@ -1,25 +1,70 @@
+
 version: '1'
 services:
-  word-splitter-bot:
+  word-splitter-multi-bot:
     build:
       context: .
       dockerfile: Dockerfile
     ports:
       - 8080
     env:
+      # Port configuration
       - name: PORT
-        value: 8080
-      - name: TELEGRAM_TOKEN
-        description: "Your Telegram Bot Token from @BotFather"
+        value: "8080"
+      
+      # ===== BOT A CONFIGURATION (Fast Interval) =====
+      - name: TELEGRAM_TOKEN_A
+        description: "Telegram Bot Token for Bot A from @BotFather"
         secret: true
-      - name: WEBHOOK_URL
-        description: "Full webhook URL (will be provided after deployment)"
-      - name: OWNER_IDS
-        description: "Comma-separated Telegram user IDs (e.g., 123456789,987654321)"
-      - name: ALLOWED_USERS
-        description: "Comma-separated allowed user IDs"
-      - name: DB_PATH
-        value: "/tmp/botdata.sqlite3"
+      - name: WEBHOOK_URL_A
+        description: "Full webhook URL for Bot A (will be provided after deployment)"
+      - name: OWNER_IDS_A
+        description: "Comma-separated Telegram user IDs for Bot A owners (e.g., 123456789,987654321)"
+      - name: ALLOWED_USERS_A
+        description: "Comma-separated allowed user IDs for Bot A"
+      - name: DB_PATH_A
+        value: "/tmp/botdata_a.sqlite3"
+      - name: USE_SLOW_INTERVAL_A
+        value: "false"
+      - name: OWNER_TAG_A
+        value: "Owner of Bot A"
+      
+      # ===== BOT B CONFIGURATION (Fast Interval) =====
+      - name: TELEGRAM_TOKEN_B
+        description: "Telegram Bot Token for Bot B from @BotFather"
+        secret: true
+      - name: WEBHOOK_URL_B
+        description: "Full webhook URL for Bot B (will be provided after deployment)"
+      - name: OWNER_IDS_B
+        description: "Comma-separated Telegram user IDs for Bot B owners"
+      - name: ALLOWED_USERS_B
+        description: "Comma-separated allowed user IDs for Bot B"
+      - name: DB_PATH_B
+        value: "/tmp/botdata_b.sqlite3"
+      - name: USE_SLOW_INTERVAL_B
+        value: "false"
+      - name: OWNER_TAG_B
+        value: "Owner of Bot B"
+      
+      # ===== BOT C CONFIGURATION (SLOW Interval) =====
+      - name: TELEGRAM_TOKEN_C
+        description: "Telegram Bot Token for Bot C from @BotFather"
+        secret: true
+      - name: WEBHOOK_URL_C
+        description: "Full webhook URL for Bot C (will be provided after deployment)"
+      - name: OWNER_IDS_C
+        description: "Comma-separated Telegram user IDs for Bot C owners"
+      - name: ALLOWED_USERS_C
+        description: "Comma-separated allowed user IDs for Bot C"
+      - name: DB_PATH_C
+        value: "/tmp/botdata_c.sqlite3"
+      - name: USE_SLOW_INTERVAL_C
+        value: "true"  # SLOW INTERVAL!
+      - name: OWNER_TAG_C
+        value: "Owner of Bot C"
+      
+      # ===== SHARED CONFIGURATION (Can be overridden per bot) =====
+      # Defaults for all bots (can be overridden with _A, _B, _C suffixes)
       - name: MAX_QUEUE_PER_USER
         value: "5"
       - name: MAX_MSG_PER_SECOND
@@ -34,17 +79,51 @@ services:
         value: "6"
       - name: PERMANENT_SUSPEND_DAYS
         value: "365"
+      
+      # Optional per-bot overrides (example for Bot A):
+      # - name: MAX_QUEUE_PER_USER_A
+      #   value: "10"
+      # - name: MAX_MSG_PER_SECOND_A
+      #   value: "100"
+    
+    # Database storage (if using persistent storage)
+    volumes:
+      - name: bot-data
+        mountPath: /tmp
+        # Optional: Use persistent volume for production
+        # persistentVolumeClaim:
+        #   claimName: bot-data-pvc
+    
     resources:
       memory: 512Mi
       cpu: 500m
+    
+    # Health checks for all bots
     healthCheck:
       path: /health
       port: 8080
       initialDelay: 10
       period: 30
+      
+    # Additional health checks per bot (if needed):
+    # - path: /health/bot_a
+    # - path: /health/bot_b
+    # - path: /health/bot_c
+    
     autoscale:
       enabled: false
+      minReplicas: 1
+      maxReplicas: 3
+      targetCPUUtilization: 70
+    
     domains:
-      - host: word-splitter-bot
+      - host: word-splitter-multi-bot
         paths:
+          - /webhook/bot_a
+          - /webhook/bot_b
+          - /webhook/bot_c
+          - /health
+          - /health/bot_a
+          - /health/bot_b
+          - /health/bot_c
           - /
