--- a/northflank.yaml
+++ b/northflank.yaml
@@ -1,3 +1,4 @@
+# northflank.yaml
 version: '1'
 services:
   multi-bot-wordsplitter:
@@ -56,24 +57,24 @@ services:
       - name: MAX_QUEUE_PER_USER_A
         value: "5"
       - name: MAX_MSG_PER_SECOND_A
-        value: "50"
+        value: "30"  # Changed from 50 to 30
       - name: MAX_CONCURRENT_WORKERS_A
-        value: "25"
+        value: "15"  # Changed from 25 to 15
       
       - name: MAX_QUEUE_PER_USER_B
         value: "5"
       - name: MAX_MSG_PER_SECOND_B
-        value: "50"
+        value: "30"  # Changed from 50 to 30
       - name: MAX_CONCURRENT_WORKERS_B
-        value: "25"
+        value: "15"  # Changed from 25 to 15
       
       # Bot C specific settings (slow intervals - 1.0-1.2s)
       - name: MAX_QUEUE_PER_USER_C
         value: "5"
       - name: MAX_MSG_PER_SECOND_C
-        value: "50"
+        value: "30"  # Changed from 50 to 30
       - name: MAX_CONCURRENT_WORKERS_C
-        value: "25"
+        value: "15"  # Changed from 25 to 15
       
       # Shared settings for all bots
       - name: REQUESTS_TIMEOUT
@@ -84,16 +85,21 @@ services:
         value: "6"
       - name: PERMANENT_SUSPEND_DAYS
         value: "365"
+      
+      # Performance settings
+      - name: GUNICORN_MODE
+        value: "true"
     
     resources:
-      memory: 768Mi  # Increased for 3 bots
-      cpu: 750m      # Increased for 3 bots
+      memory: 512Mi  # Reduced for Northflank free tier
+      cpu: 500m      # Reduced for Northflank free tier
     healthCheck:
-      # Multiple health endpoints available, using bot A as main health check
+      # Use bot A health endpoint (lightweight)
       path: /health/a
       port: 8080
-      initialDelay: 10
-      period: 30
+      initialDelay: 20  # Increased for slower startup
+      period: 45        # Increased check interval
+      timeout: 10       # Increased timeout
     autoscale:
       enabled: false
     domains:
