--- a/northflank.yaml
+++ b/northflank.yaml
@@ -1,3 +1,5 @@
+[file name]: northflank.yaml
+[file content begin]
 version: '1'
 services:
   multi-bot-wordsplitter:
@@ -10,6 +12,11 @@ services:
       # Port configuration
       - name: PORT
         value: 8080
+      
+      # PostgreSQL Database Configuration
+      - name: DATABASE_URL
+        description: "PostgreSQL connection string (e.g., postgresql://user:pass@host:port/db)"
+        secret: true
       
       # Bot A Configuration
       - name: TELEGRAM_TOKEN_A
@@ -43,14 +50,6 @@ services:
         description: "Comma-separated Telegram user IDs for Bot C owners"
       - name: ALLOWED_USERS_C
         description: "Comma-separated allowed user IDs for Bot C"
-      
-      # Database paths for each bot (with /tmp fix applied to all)
-      - name: DB_PATH_A
-        value: "/tmp/botdata_a.sqlite3"
-      - name: DB_PATH_B
-        value: "/tmp/botdata_b.sqlite3"
-      - name: DB_PATH_C
-        value: "/tmp/botdata_c.sqlite3"
       
       # Bot A & B specific settings (fast intervals - 0.5-0.7s)
       - name: MAX_QUEUE_PER_USER_A
@@ -86,10 +85,9 @@ services:
         value: "365"
     
     resources:
-      memory: 512Mi  # Increased for 3 bots
-      cpu: 500m      # Increased for 3 bots
+      memory: 512Mi
+      cpu: 500m
     healthCheck:
-      # Multiple health endpoints available, using bot A as main health check
       path: /health/a
       port: 8080
       initialDelay: 10
@@ -100,3 +98,8 @@ services:
       - host: multi-bot-wordsplitter
         paths:
           - /
+    addons:
+      postgres:
+        plan: hobbyist  # Or appropriate plan for your needs
+        version: "15"
+[file content end]
