--- a/northflank.yaml
+++ b/northflank.yaml
@@ -11,71 +11,50 @@ services:
       - name: PORT
         value: 8080
       
-      # Bot A Configuration
+      # Webhook base URL
+      - name: WEBHOOK_URL_BASE
+        description: "Base URL for webhooks (e.g., https://yourserver.com)"
+      
+      # Shared user management
+      - name: OWNER_IDS
+        description: "Comma-separated Telegram user IDs for bot owners (e.g., 123456789,987654321)"
+      - name: ALLOWED_USERS
+        description: "Comma-separated allowed user IDs for all bots"
+      - name: OWNER_TAG
+        value: "Owner (@justmemmy)"
+      
+      # Bot-specific Telegram tokens
       - name: TELEGRAM_TOKEN_A
         description: "Telegram Bot Token for Bot A from @BotFather"
         secret: true
-      - name: WEBHOOK_URL_A
-        description: "Full webhook URL for Bot A (e.g., https://yourserver.com/webhook/a)"
-      - name: OWNER_IDS_A
-        description: "Comma-separated Telegram user IDs for Bot A owners (e.g., 123456789,987654321)"
-      - name: ALLOWED_USERS_A
-        description: "Comma-separated allowed user IDs for Bot A"
-      
-      # Bot B Configuration
       - name: TELEGRAM_TOKEN_B
         description: "Telegram Bot Token for Bot B from @BotFather"
         secret: true
-      - name: WEBHOOK_URL_B
-        description: "Full webhook URL for Bot B (e.g., https://yourserver.com/webhook/b)"
-      - name: OWNER_IDS_B
-        description: "Comma-separated Telegram user IDs for Bot B owners"
-      - name: ALLOWED_USERS_B
-        description: "Comma-separated allowed user IDs for Bot B"
-      
-      # Bot C Configuration
       - name: TELEGRAM_TOKEN_C
         description: "Telegram Bot Token for Bot C from @BotFather"
         secret: true
-      - name: WEBHOOK_URL_C
-        description: "Full webhook URL for Bot C (e.g., https://yourserver.com/webhook/c)"
-      - name: OWNER_IDS_C
-        description: "Comma-separated Telegram user IDs for Bot C owners"
-      - name: ALLOWED_USERS_C
-        description: "Comma-separated allowed user IDs for Bot C"
       
-      # Database paths for each bot (with /tmp fix applied to all)
-      - name: DB_PATH_A
-        value: "/tmp/botdata_a.sqlite3"
-      - name: DB_PATH_B
-        value: "/tmp/botdata_b.sqlite3"
-      - name: DB_PATH_C
-        value: "/tmp/botdata_c.sqlite3"
+      # Bot-specific interval speeds
+      - name: INTERVAL_SPEED_A
+        value: "fast"
+      - name: INTERVAL_SPEED_B
+        value: "fast"
+      - name: INTERVAL_SPEED_C
+        value: "slow"
       
-      # Bot A & B specific settings (fast intervals - 0.5-0.7s)
-      - name: MAX_QUEUE_PER_USER_A
+      # Database template (bot-specific paths generated from template)
+      - name: DB_PATH_TEMPLATE
+        value: "/tmp/botdata_{bot_id}.sqlite3"
+      
+      # Shared operational settings (same for all bots)
+      - name: MAX_QUEUE_PER_USER
         value: "5"
-      - name: MAX_MSG_PER_SECOND_A
+      - name: MAX_MSG_PER_SECOND
         value: "30"
-      - name: MAX_CONCURRENT_WORKERS_A
+      - name: MAX_CONCURRENT_WORKERS
         value: "15"
       
-      - name: MAX_QUEUE_PER_USER_B
-        value: "5"
-      - name: MAX_MSG_PER_SECOND_B
-        value: "30"
-      - name: MAX_CONCURRENT_WORKERS_B
-        value: "15"
-      
-      # Bot C specific settings (slow intervals - 1.0-1.2s)
-      - name: MAX_QUEUE_PER_USER_C
-        value: "5"
-      - name: MAX_MSG_PER_SECOND_C
-        value: "30"
-      - name: MAX_CONCURRENT_WORKERS_C
-        value: "15"
-      
-      # Shared settings for all bots
+      # Shared timeout and retention settings
       - name: REQUESTS_TIMEOUT
         value: "10"
       - name: LOG_RETENTION_DAYS
