--- a/northflank.yaml
+++ b/northflank.yaml
@@ -11,42 +11,15 @@ services:
       - name: PORT
         value: 8080
       
-      # Webhook base URL
-      - name: WEBHOOK_URL_BASE
-        description: "Base URL for webhooks (e.g., https://yourserver.com)"
-      
-      # Shared user management
+      # SHARED Configuration for ALL bots
       - name: OWNER_IDS
-        description: "Comma-separated Telegram user IDs for bot owners (e.g., 123456789,987654321)"
+        description: "Comma-separated Telegram user IDs for ALL bot owners"
       - name: ALLOWED_USERS
-        description: "Comma-separated allowed user IDs for all bots"
-      - name: OWNER_TAG
-        value: "Owner (@justmemmy)"
+        description: "Comma-separated allowed user IDs for ALL bots"
+      - name: WEBHOOK_URL_BASE
+        description: "Base webhook URL for ALL bots (e.g., https://yourserver.com)"
       
-      # Bot-specific Telegram tokens
-      - name: TELEGRAM_TOKEN_A
-        description: "Telegram Bot Token for Bot A from @BotFather"
-        secret: true
-      - name: TELEGRAM_TOKEN_B
-        description: "Telegram Bot Token for Bot B from @BotFather"
-        secret: true
-      - name: TELEGRAM_TOKEN_C
-        description: "Telegram Bot Token for Bot C from @BotFather"
-        secret: true
-      
-      # Bot-specific interval speeds
-      - name: INTERVAL_SPEED_A
-        value: "fast"
-      - name: INTERVAL_SPEED_B
-        value: "fast"
-      - name: INTERVAL_SPEED_C
-        value: "slow"
-      
-      # Database template (bot-specific paths generated from template)
-      - name: DB_PATH_TEMPLATE
-        value: "/tmp/botdata_{bot_id}.sqlite3"
-      
-      # Shared operational settings (same for all bots)
+      # SHARED Performance limits for ALL bots
       - name: MAX_QUEUE_PER_USER
         value: "5"
       - name: MAX_MSG_PER_SECOND
@@ -54,7 +27,28 @@ services:
       - name: MAX_CONCURRENT_WORKERS
         value: "15"
       
-      # Shared timeout and retention settings
+      # Bot A specific (token and db only)
+      - name: TELEGRAM_TOKEN_A
+        description: "Telegram Bot Token for Bot A from @BotFather"
+        secret: true
+      - name: DB_PATH_A
+        value: "/tmp/botdata_a.sqlite3"
+      
+      # Bot B specific (token and db only)
+      - name: TELEGRAM_TOKEN_B
+        description: "Telegram Bot Token for Bot B from @BotFather"
+        secret: true
+      - name: DB_PATH_B
+        value: "/tmp/botdata_b.sqlite3"
+      
+      # Bot C specific (token and db only)
+      - name: TELEGRAM_TOKEN_C
+        description: "Telegram Bot Token for Bot C from @BotFather"
+        secret: true
+      - name: DB_PATH_C
+        value: "/tmp/botdata_c.sqlite3"
+      
+      # Shared settings for all bots
       - name: REQUESTS_TIMEOUT
         value: "10"
       - name: LOG_RETENTION_DAYS
