--- a/northflank.yaml
+++ b/northflank.yaml
@@ -11,44 +11,40 @@ services:
       - name: PORT
         value: 8080
       
-      # SHARED Configuration for ALL bots
-      - name: OWNER_IDS
-        description: "Comma-separated Telegram user IDs for ALL bot owners"
-      - name: ALLOWED_USERS
-        description: "Comma-separated allowed user IDs for ALL bots"
+      # SHARED CONFIGURATION for all bots
       - name: WEBHOOK_URL_BASE
-        description: "Base webhook URL for ALL bots (e.g., https://yourserver.com)"
+        description: "Base webhook URL for all bots (e.g., https://yourserver.com)"
+      - name: OWNER_IDS
+        description: "Comma-separated Telegram user IDs for all bot owners (e.g., 123456789,987654321)"
+      - name: ALLOWED_USERS
+        description: "Comma-separated allowed user IDs for all bots"
       
-      # SHARED Performance limits for ALL bots
+      # Bot-specific tokens
+      - name: TELEGRAM_TOKEN_A
+        description: "Telegram Bot Token for Bot A from @BotFather"
+        secret: true
+      - name: TELEGRAM_TOKEN_B
+        description: "Telegram Bot Token for Bot B from @BotFather"
+        secret: true
+      - name: TELEGRAM_TOKEN_C
+        description: "Telegram Bot Token for Bot C from @BotFather"
+        secret: true
+      
+      # Bot-specific database paths (with /tmp fix applied to all)
+      - name: DB_PATH_A
+        value: "/tmp/botdata_a.sqlite3"
+      - name: DB_PATH_B
+        value: "/tmp/botdata_b.sqlite3"
+      - name: DB_PATH_C
+        value: "/tmp/botdata_c.sqlite3"
+      
+      # SHARED settings for all bots
       - name: MAX_QUEUE_PER_USER
         value: "5"
       - name: MAX_MSG_PER_SECOND
         value: "30"
       - name: MAX_CONCURRENT_WORKERS
         value: "15"
-      
-      # Bot A specific (token and db only)
-      - name: TELEGRAM_TOKEN_A
-        description: "Telegram Bot Token for Bot A from @BotFather"
-        secret: true
-      - name: DB_PATH_A
-        value: "/tmp/botdata_a.sqlite3"
-      
-      # Bot B specific (token and db only)
-      - name: TELEGRAM_TOKEN_B
-        description: "Telegram Bot Token for Bot B from @BotFather"
-        secret: true
-      - name: DB_PATH_B
-        value: "/tmp/botdata_b.sqlite3"
-      
-      # Bot C specific (token and db only)
-      - name: TELEGRAM_TOKEN_C
-        description: "Telegram Bot Token for Bot C from @BotFather"
-        secret: true
-      - name: DB_PATH_C
-        value: "/tmp/botdata_c.sqlite3"
-      
-      # Shared settings for all bots
       - name: REQUESTS_TIMEOUT
         value: "10"
       - name: LOG_RETENTION_DAYS
